--- a/views/list.ejs
+++ b/views/list.ejs
@@ -47,10 +47,14 @@
     <!--본문-->
     <h4>list 페이지</h4>
 
+    <!--반복문 이용-->
+    <% for(let i = 0; i < posts.length; i++) { %>
     <!--서버에서 가져온 할 일 리스트-->
-    <h4>할 일 제목: <%= %></h4>
-    <p>할 일 마감날짜: ??</p>
+    <h4>할 일 제목: <%= posts[i].title %></h4>
+    <p>할 일 마감날짜: <%= posts[i].date %></p>
     <!--서버에서 가져온 할 일 리스트-->
+    <% } %>
+    <!--반복문 이용-->
 
     <!--본문-->
 
