--- a/views/list.ejs
+++ b/views/list.ejs
@@ -45,24 +45,38 @@
     <!--네비게이션 바-->
 
     <!--본문-->
-    <h4>list 페이지</h4>
+    <h4 class="ml-2 my-3">list 페이지</h4>
+    <!--반복문 이용-->
+    <ul class="list-group">
+      <% for(let i = 0; i < posts.length; i++) { %>
+      <li class="list-group-item">
+        <!--서버에서 가져온 할 일 리스트-->
+        <h4>할 일 제목: <%= posts[i].title %></h4>
+        <p>할 일 마감날짜: <%= posts[i].date %></p>
+        <!--서버에서 가져온 할 일 리스트-->
+        <!--삭제 버튼-->
+        <button type="button" class="btn btn-dark">삭제</button>
+        <!--삭제 버튼-->
+      </li>
+      <% } %>
+    </ul>
+    <!--반복문 이용-->
 
-    <!--반복문 이용-->
-    <% for(let i = 0; i < posts.length; i++) { %>
-    <!--서버에서 가져온 할 일 리스트-->
-    <h4>할 일 제목: <%= posts[i].title %></h4>
-    <p>할 일 마감날짜: <%= posts[i].date %></p>
-    <!--서버에서 가져온 할 일 리스트-->
-    <% } %>
-    <!--반복문 이용-->
+    <!--CDN방식 jQuery 설치-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+    <script>
+      $.ajax({
+        method: "DELETE",
+        url: "/delete",
+        data: "게시물번호",
+      }).done(function (result) {
+        console.log();
+      });
+    </script>
 
     <!--본문-->
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
