--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <title>list</title>
+    <title>detail</title>
   </head>
 
   <body>
@@ -45,53 +45,10 @@
     <!--네비게이션 바-->
 
     <!--본문-->
-    <h4 class="ml-2 my-3">list 페이지</h4>
-    <!--반복문 이용-->
-    <ul class="list-group">
-      <% for(let i = 0; i < posts.length; i++) { %>
-      <li class="list-group-item">
-        <p>글번호: <%= posts[i]._id%></p>
-        <!--서버에서 가져온 할 일 리스트-->
-        <h4>할 일 제목: <%= posts[i].title %></h4>
-        <p>할 일 마감날짜: <%= posts[i].date %></p>
-        <!--서버에서 가져온 할 일 리스트-->
-        <!--삭제 버튼-->
-        <button
-          type="button"
-          class="delete btn btn-dark"
-          data-id="<%= posts[i]._id%>"
-        >
-          삭제
-        </button>
-        <!--삭제 버튼-->
-      </li>
-      <% } %>
-    </ul>
-    <!--반복문 이용-->
+    <h4 class="ml-2 my-3">detail 페이지</h4>
 
-    <!--CDN방식 jQuery 설치-->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-    <!--delete 버튼 클릭 시, 삭제-->
-    <script>
-      $(".delete").click(function (e) {
-        let postNum = e.target.dataset.id;
-        let nowClick = $(this);
-        $.ajax({
-          method: "DELETE",
-          url: "/delete",
-          data: { _id: postNum },
-        })
-          .done(function (result) {
-            //삭제버튼을 누른 <li> 요소를 제거/안보이게
-            console.log("성공했습니다");
-            nowClick.parent("li").fadeOut();
-          })
-          .fail(function (a, b, c) {
-            console.log("실패했습니다", a, b, c);
-          });
-      });
-    </script>
+    <h4>제목: <%= data.title %></h4>
+    <h4>날짜: <%= data.date %></h4>
 
     <!--본문-->
 
