--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/public/main.css" />
+    <!--Bootsrap CSS-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,43 +14,24 @@
   </head>
 
   <body>
-    <!--네비게이션 바-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">HM-Project</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Write</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">임시</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!--네비게이션 바-->
+    <!--nav.html-->
+    <%- include('nav.html') %>
 
     <!--본문-->
-    <h4 class="ml-2 my-3">detail 페이지</h4>
-
-    <h4>제목: <%= data.title %></h4>
-    <h4>날짜: <%= data.date %></h4>
+    <div class="container mt-4">
+      <h4 class="text-center">detail 페이지</h4>
+      <div class="card" style="width: 100%">
+        <div class="card-body">
+          <h5 class="card-title"><%= data.title %></h5>
+          <h6 class="card-subtitle mb-2 text-muted"><%= data.date %></h6>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="card-link">수정하기</a>
+        </div>
+      </div>
+    </div>
 
     <!--본문-->
 
