--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/public/main.css" />
+    <!--Bootsrap CSS-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,62 +14,35 @@
   </head>
 
   <body>
-    <!--네비게이션 바-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">HM-Project</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Write</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">임시</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!--네비게이션 바-->
+    <!--nav.html-->
+    <%- include('nav.html') %>
 
     <!--본문-->
-    <h4 class="ml-2 my-3">list 페이지</h4>
-    <!--반복문 이용-->
-    <ul class="list-group">
-      <% for(let i = 0; i < posts.length; i++) { %>
-      <li class="list-group-item">
-        <p>글번호: <%= posts[i]._id%></p>
-        <!--서버에서 가져온 할 일 리스트-->
-        <h4>할 일 제목: <%= posts[i].title %></h4>
-        <p>할 일 마감날짜: <%= posts[i].date %></p>
-        <!--서버에서 가져온 할 일 리스트-->
-        <!--삭제 버튼-->
-        <button
-          type="button"
-          class="delete btn btn-dark"
-          data-id="<%= posts[i]._id%>"
-        >
-          삭제
-        </button>
-        <!--삭제 버튼-->
-      </li>
-      <% } %>
-    </ul>
-    <!--반복문 이용-->
+    <div class="container">
+      <h4 class="ml-2 my-3 text-center">list 페이지</h4>
+      <!--반복문 이용-->
+      <ul class="list-group">
+        <% for(let i = 0; i < posts.length; i++) { %>
+        <li class="list-group-item">
+          <p>글번호: <%= posts[i]._id%></p>
+          <!--서버에서 가져온 할 일 리스트-->
+          <h4>할 일 제목: <%= posts[i].title %></h4>
+          <p>할 일 마감날짜: <%= posts[i].date %></p>
+          <!--서버에서 가져온 할 일 리스트-->
+          <!--삭제 버튼-->
+          <button
+            type="button"
+            class="btn btn-dark delete"
+            data-id="<%= posts[i]._id%>"
+          >
+            삭제
+          </button>
+          <!--삭제 버튼-->
+        </li>
+        <% } %>
+      </ul>
+      <!--반복문 이용-->
+    </div>
 
     <!--CDN방식 jQuery 설치-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
