--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,44 +8,43 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
-    <title>HM-Project</title>
+    <title>Write</title>
   </head>
 
   <body>
-    <!--네비게이션 바-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">HM-Project</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/write.html">Write</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">임시</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!--네비게이션 바-->
+    <!--nav.html-->
+    <%- include('nav.html') %>
 
     <!--본문-->
-    <h4>메인 페이지</h4>
+    <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
+
+    <!--작성 폼-->
+    <div class="container mt-3">
+      <!--form 내용 서버로 전달하려면 꼭 있어야 하는 속성-->
+      <form action="/add?_method=PUT" method="POST">
+        <div class="form-group">
+          <label>오늘의 할일</label>
+          <input
+            value="<%= post.title %>"
+            type="text"
+            class="form-control"
+            name="title"
+          />
+        </div>
+        <div class="form-group">
+          <label>날짜</label>
+          <input
+            value="<%= post.date %>"
+            type="text"
+            class="form-control"
+            name="date"
+          />
+        </div>
+        <button type="submit" class="btn btn-outline-secondary">Submit</button>
+      </form>
+      <!--작성 폼-->
+    </div>
+
     <!--본문-->
 
     <script
