--- a/views/nav.html
+++ b/views/nav.html
@@ -15,12 +15,12 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/index.html"
+        <a class="nav-link" href="#"
           >Home <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/write.html">Write</a>
+        <a class="nav-link" href="#">Write</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">임시</a>
