--- a/views/write.ejs
+++ b/views/write.ejs
@@ -12,37 +12,8 @@
   </head>
 
   <body>
-    <!--네비게이션 바-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">HM-Project</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/write.html">Write</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">임시</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!--네비게이션 바-->
+    <!--nav.html-->
+    <%- include('nav.html') %>
 
     <!--본문-->
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
