--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -21,7 +21,15 @@
     <!--작성 폼-->
     <div class="container mt-3">
       <!--form 내용 서버로 전달하려면 꼭 있어야 하는 속성-->
-      <form action="/login" method="POST">
+      <form action="/signin" method="POST">
+        <div class="form-group">
+          <label>이름</label>
+          <input type="text" class="form-control" name="name" />
+        </div>
+        <div class="form-group">
+          <label>전화번호</label>
+          <input type="text" class="form-control" name="number" />
+        </div>
         <div class="form-group">
           <label>아이디</label>
           <input type="text" class="form-control" name="id" />
