--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <%- include('nav.html') %>
 
     <!--본문-->
-    <h4>메인 페이지</h4>
+    <h4 class="container mt-4">메인 페이지</h4>
     <!--본문-->
 
     <script
