--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
           <label>패스워드</label>
           <input type="password" class="form-control" name="pw" />
         </div>
-        <button type="submit" class="btn btn-outline-secondary">Submit</button>
+        <button type="submit" class="btn btn-outline-secondary">로그인</button>
       </form>
       <!--작성 폼-->
     </div>
