--- a/views/nav.html
+++ b/views/nav.html
@@ -1,6 +1,6 @@
 <!--네비게이션 바-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HM-Project</a>
+  <a class="navbar-brand" href="/">HM-Project</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -15,15 +15,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#"
-          >Home <span class="sr-only">(current)</span></a
+        <a class="nav-link" href="/"
+          >Home<span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Write</a>
+        <a class="nav-link" href="/write">Write</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">임시</a>
+        <a class="nav-link" href="/login">로그인</a>
       </li>
     </ul>
   </div>
