20230818 코드 다듬기 중

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,17 @@
     <%- include('nav.html') %>
 
     <!--본문-->
-    <h4 class="container mt-4">메인 페이지</h4>
+    <div class="container page-header">
+      <h1>HM-PROJECT <small>메인 페이지</small></h1>
+    </div>
+    <!--썸네일 구간-->
+    <div class="container jumbotron">
+      <h1>이야기를 남겨주세요.</h1>
+      <p>대충 주저리주저리</p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="/write" role="button">글쓰기</a>
+      </p>
+    </div>
     <!--본문-->
 
     <script
