--- a/views/nav.html
+++ b/views/nav.html
@@ -19,11 +19,21 @@
           >Home<span class="sr-only">(current)</span></a
         >
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="/write">Write</a>
+        <a class="nav-link" href="/post/write">Write</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login">로그인</a>
+        <a class="nav-link" href="/list">게시글 보기</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/mypage">마이페이지</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/user/login">로그인</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/user/signin">회원가입</a>
       </li>
     </ul>
   </div>
